--- a/makehuman/data/languages/master.json
+++ b/makehuman/data/languages/master.json
@@ -267,7 +267,6 @@
     "Top": "Top",
     "Bottom": "Bottom",
     "Other": "Other",
-    "Opacity: %d%%": "Opacity: %d%%",
     "Move && Resize": "Move && Resize",
     "Show in foreground": "Show in foreground",
     "Background": "Background",
@@ -330,7 +329,6 @@
     "Arabic": "Arabic",
     "General": "General",
     "3D Viewport Speed": "3D Viewport Speed",
-    "Normal speed: %d": "Normal speed: %d",
     "Camera": "Camera",
     "Move": "Move",
     "Rotate": "Rotate",
@@ -399,23 +397,19 @@
     "UV map": "UV map",
     "Plugins": "Plugins",
     "neutral": "neutral",
-    "Gender: %s, Age: %d, Muscle: %.2f%%, Weight: %.2f%%, Height: %.2f %s": "Gender: %s, Age: %d, Muscle: %.2f%%, Weight: %.2f%%, Height: %.2f %s",
     "Don't show this again": "Don't show this again",
     "Yes": "Yes",
     "No": "No",
     "MakeHuman is a character creation suite. It is designed for making anatomically correct humans.\nParts of this program may contain nudity.\nDo you want to proceed?": "MakeHuman is a character creation suite. It is designed for making anatomically correct humans.\nParts of this program may contain nudity.\nDo you want to proceed?",
-    "Bones: %s": "Bones: %s",
     "Blender Exchange (*.mhx)": "Blender Exchange (*.mhx)",
     "Exporting MHX": "Exporting MHX",
     "Exporting armature": "Exporting armature",
     "Exporting materials": "Exporting materials",
     "Exporting main mesh": "Exporting main mesh",
     "OK": "OK",
-    "The mesh has been exported to %s.": "The mesh has been exported to %s.",
     "Info": "Info",
     "Filmbox (*.fbx)": "Filmbox (*.fbx)",
     "Preparing": "Preparing",
-    "Exporting %s": "Exporting %s",
     "Collada (*.dae)": "Collada (*.dae)",
     "Exporting images": "Exporting images",
     "Exporting effects": "Exporting effects",
@@ -426,30 +420,20 @@
     "Wavefront (*.obj)": "Wavefront (*.obj)",
     "Collecting Objects": "Collecting Objects",
     "Writing Objects": "Writing Objects",
-    "OBJ Export finished. Output file: %s": "OBJ Export finished. Output file: %s",
     "MD5 (*.md5)": "MD5 (*.md5)",
     "Writing Bones": "Writing Bones",
     "Writing Animations": "Writing Animations",
-    "MD5 export finished. Exported file: %s": "MD5 export finished. Exported file: %s",
     "Ogre3D Mesh XML (*.mesh.xml)": "Ogre3D Mesh XML (*.mesh.xml)",
     "Setting properties": "Setting properties",
     "Writing Materials": "Writing Materials",
     "Ogre export finished.": "Ogre export finished.",
     "Stereolithography (*.stl)": "Stereolithography (*.stl)",
-    "STL export finished. Exported file: %s": "STL export finished. Exported file: %s",
     "Biovision Hierarchy (*.bvh)": "Biovision Hierarchy (*.bvh)",
     "You did not select a skeleton from the library.": "You did not select a skeleton from the library.",
     "Skeleton (*.skel)": "Skeleton (*.skel)",
     "PNG (*.png)": "PNG (*.png)",
     "Projecting UV map": "Projecting UV map",
-    "%.2f%% female, %.2f%% male": "%.2f%% female, %.2f%% male",
-    "Height: %s": "Height: %s",
-    "Chest: %s": "Chest: %s",
-    "Waist: %s": "Waist: %s",
-    "Hips: %s": "Hips: %s",
-    "No custom targets found. To add a custom target, place the file in %s": "No custom targets found. To add a custom target, place the file in %s",
     "A basic rig. Use this for weighting.": "A basic rig. Use this for weighting.",
-    "Description: %s": "Description: %s",
     "A minimal rig intended for games.": "A minimal rig intended for games.",
     "Rig for use with Maya HumanIK": "Rig for use with Maya HumanIK",
     "The default rig with muscle bones. Use this for weighting muscles.": "The default rig with muscle bones. Use this for weighting muscles.",
@@ -458,7 +442,6 @@
     "AntiAliasing": "AntiAliasing",
     "Rendering complete": "Rendering complete",
     "You need to restart for your language changes to be applied.": "You need to restart for your language changes to be applied.",
-    "Images which are placed in %s will show up here.": "Images which are placed in %s will show up here.",
     "Click on a mouse action box using the modifiers and buttons which you would like to assign to the given action.": "Click on a mouse action box using the modifiers and buttons which you would like to assign to the given action.",
     "This combination is already in use.": "This combination is already in use.",
     "Click on a shortcut box and press the keys of the shortcut which you would like to assign to the given action.": "Click on a shortcut box and press the keys of the shortcut which you would like to assign to the given action.",
@@ -547,7 +530,6 @@
     "Merge palms": "Merge palms",
     "Merge shoulders": "Merge shoulders",
     "Merge spine": "Merge spine",
-    "Mesh distort %0.2f": "Mesh distort %0.2f",
     "Move corners vert.": "Move corners vert.",
     "Move depth": "Move depth",
     "Move eye horizontally": "Move eye horizontally",
@@ -629,7 +611,6 @@
     "Shader": "Shader",
     "Shell": "Shell",
     "Skeleton Debug": "Skeleton Debug",
-    "Slider %.2f": "Slider %.2f",
     "Smooth": "Smooth",
     "Sockets (MHX only)": "Sockets (MHX only)",
     "spec": "spec",
@@ -658,4 +639,55 @@
     "Value is 0.5": "Value is 0.5",
     "vertexColors": "vertexColors",
     "Wireframe": "Wireframe"
+    "Opacity": "Opacity",
+    "Normal speed": "Normal speed",
+    "Slider": "Slider",
+    "Mesh distort": "Mesh distort",
+    "No custom targets found. To add a custom target, place the file in": "No custom targets found. To add a custom target, place the file in",
+    "Chest": "Chest",
+    "Waist": "Waist",
+    "This is an example plugin; see plugins/7_example.py": "This is an example plugin; see plugins/7_example.py",
+    "litsphereTexture": "litsphereTexture",
+    "Image Files (*.png *.jpg *.bmp)": "Image Files (*.png *.jpg *.bmp)",
+    "Diffuse": "Diffuse",
+    "Pick": "Pick",
+    "Diffuse texture": "Diffuse texture",
+    "Ambient": "Ambient",
+    "Specular": "Specular",
+    "Specular shininess": "Specular shininess",
+    "Emissive": "Emissive",
+    "Translucency": "Translucency",
+    "Transparent": "Transparent",
+    "Alpha to Coverage": "Alpha to Coverage",
+    "Backface culling": "Backface culling",
+    "Depthless": "Depthless",
+    "Auto ethnic skin": "Auto ethnic skin",
+    "Transparency map texture": "Transparency map texture",
+    "Transparency (map) intensity": "Transparency (map) intensity",
+    "Bump map texture": "Bump map texture",
+    "Bump map intensity": "Bump map intensity",
+    "Normal map texture": "Normal map texture",
+    "Normal map intensity": "Normal map intensity",
+    "Displacement map texture": "Displacement map texture",
+    "Displacement map intensity": "Displacement map intensity",
+    "Specular map texture": "Specular map texture",
+    "Specular map intensity": "Specular map intensity",
+    "Ambient Occlusion texture": "Ambient Occlusion texture",
+    "AO map intensity": "AO map intensity",
+    "Default": "Default",
+    "UV Set (*.obj)": "UV Set (*.obj)",
+    "Material name": "Material name",
+    "Environment properties": "Environment properties",
+    "Ambience": "Ambience",
+    "Light 0 properties": "Light 0 properties",
+    "Position": "Position",
+    "Focus": "Focus",
+    "Color": "Color",
+    "Spot angle": "Spot angle",
+    "Attenuation": "Attenuation",
+    "Soft light": "Soft light",
+    "Softness": "Softness",
+    "Samples": "Samples",
+    "Remove light 0": "Remove light 0",
+    "This is a rough scripting module": "This is a rough scripting module"
 }
