README edited online with Bitbucket

--- a/README
+++ b/README
@@ -2,7 +2,8 @@ MakeHuman
 =========
 
 Makehuman is a completely free, innovative and professional software for the 
-modelling of 3-Dimensional humanoid characters. This is the official source 
+modelling of 3-Dimensional humanoid characters.
+This (https://bitbucket.org/MakeHuman/makehuman) is the official source 
 repository of the MakeHuman project.
 
 Official website: http://www.makehuman.org
