--- a/README
+++ b/README
@@ -12,12 +12,14 @@ Development status: http://bugtracker.makehuman.org
 License
 -------
 
-MakeHuman's source code and its mesh data is distributed freely under the AGPL3
-license (see license.txt). Content created using the MakeHuman application is
-released under the liberal CC0 license. For more details, refer to these pages:
+The MakeHuman source and data are released under the AGPLv3 license.
+This also includes everything that is exported from or by MakeHuman. 
+However, respecting a set of conditions (which are explained in section 
+C of license.txt), you are allowed to instead use the CC0 license 
+for exports.
 
-* http://www.makehuman.org/doc/node/the_makehuman_application.html
-* http://www.makehuman.org/doc/node/makehuman_mesh_license.html
+The human readable explanation of the license terms is here: 
+http://www.makehuman.org/content/license_explanation.html
 
 Licenses for dependencies are included in the licenses folder.
 
@@ -35,12 +37,12 @@ for use with Blender (www.blender.org).
 Help and support
 ----------------
 
-For further help, have a look at our documentation at 
+For further help, have a look at our documentation at:
 http://www.makehuman.org/documentation 
 and frequently asked questions 
 http://www.makehuman.org/faq
 
-If you have other questions, feel free to ask them on our forums at 
+If you have other questions, feel free to ask them on our forums at:
 http://www.makehuman.org/forum/
 
 Bugs can be reported on the project's bug tracker: 
