--- a/makehuman/data/languages/master.json
+++ b/makehuman/data/languages/master.json
@@ -638,7 +638,7 @@
     "Upperlip curved shape": "Upperlip curved shape",
     "Value is 0.5": "Value is 0.5",
     "vertexColors": "vertexColors",
-    "Wireframe": "Wireframe"
+    "Wireframe": "Wireframe",
     "Opacity": "Opacity",
     "Normal speed": "Normal speed",
     "Slider": "Slider",
